--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,5 @@
-$font-stack:    Helvetica, sans-serif;
-$primary-color: #333;
+@import "./vendor/normalize.css";
 
-body {
-  font: 100% $font-stack;
-  color: $primary-color;
-}
+@import "./blocks/page/page.scss";
+
+@import "./blocks/header/header.scss";
