--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,3 +1,5 @@
+$font-family: 'YS Text';
+
 .header{
   grid-column-start: 1;
   grid-column-end: 13;
@@ -18,7 +20,7 @@
 }
 
 .header__questions{
-  margin: 0 260px 0 0;
+  margin: 0 173px 0 0;
   padding: 0;
   display: grid;
   grid-template-columns:  repeat(4, max-content);
@@ -28,7 +30,7 @@
 .header__question-text{
   list-style-type: none;
 
-  font-family: 'YS Text';
+  font-family: $font-family;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -37,7 +39,7 @@
 }
 
 .header__button{
-  font-family: 'YS Text';
+  font-family: $font-family;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
