--- a/src/blocks/layout/layout.scss
+++ b/src/blocks/layout/layout.scss
@@ -1,6 +1,7 @@
-.page {
+.layout {
+  max-width: 1440px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: $primary-bg-color;
 }
