feat: questions section

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,5 +3,8 @@
 @import "./vendor/fonts/fonts.css";
 @import "./blocks/page/page.scss";
 @import "./blocks/header/header.scss";
+@import "./blocks/content/content.scss";
 @import "./blocks/layout/layout.scss";
-@import "./blocks/main-width-block/main-width-block.scss"
+@import "./blocks/main-width-block/main-width-block.scss";
+@import "./blocks/section-title/section-title.scss";
+@import "./blocks/questions/questions.scss"
