добавил разметку + жёлтый цвет в переменные

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -3,6 +3,7 @@ $font-family-primary: 'YS Sans', Helvetica, sans-serif;
 $font-family-section-titles: 'YS Display', Helvetica, sans-serif;
 $primary-color: #bada55;
 $primary-bg-color: #E9E9E9;
+$attention-color: #FCD559;
 $primary-text-color: #000;
 $black-color: #000;
 $cards-bg-color: #fff;
