добавил блок quizz и переменную с паддингом 40px

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,3 +9,4 @@
 @import "./blocks/section-title/section-title.scss";
 @import "./blocks/questions/questions.scss";
 @import "./blocks/section-1/section-1.scss";
+@import "./blocks/quizz/quizz.scss";
