feat: vacancy banner

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,8 +2,10 @@ $font-family: 'YS Text', Helvetica, sans-serif;
 $font-family-primary: 'YS Sans', Helvetica, sans-serif;
 $font-family-section-titles: 'YS Display', Helvetica, sans-serif;
 $primary-color: #bada55;
+$accent-yellow-color: #FCD559;
 $primary-bg-color: #E9E9E9;
 $primary-text-color: #000;
+$content-primary-color: #000;
 $black-color: #000;
 $cards-bg-color: #fff;
 $cards-border-radius: 16px;
