--- a/src/app.scss
+++ b/src/app.scss
@@ -7,4 +7,5 @@
 @import "./blocks/layout/layout.scss";
 @import "./blocks/main-width-block/main-width-block.scss";
 @import "./blocks/section-title/section-title.scss";
-@import "./blocks/questions/questions.scss"
+@import "./blocks/questions/questions.scss";
+@import "./blocks/vacancy/vacancy.scss";
