--- a/src/blocks/section-title/section-title.scss
+++ b/src/blocks/section-title/section-title.scss
@@ -4,7 +4,8 @@
   margin-left: 40px;
   margin-bottom: 48px;
   padding: 0;
-  font-size: 500;
+  font-weight: 500;
+  font-size: 40px;
   line-height: 1.3;
   color: $primary-text-color;
 }
