--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,10 +2,45 @@ $font-family: 'YS Text', Helvetica, sans-serif;
 $font-family-primary: 'YS Sans', Helvetica, sans-serif;
 $font-family-section-titles: 'YS Display', Helvetica, sans-serif;
 $primary-color: #bada55;
-$primary-bg-color: #E9E9E9;
-$attention-color: #FCD559;
+$primary-bg-color: #e9e9e9;
+$attention-color: #fcd559;
 $primary-text-color: #000;
+$light-text-color: #fff;
 $black-color: #000;
 $cards-bg-color: #fff;
 $cards-border-radius: 16px;
-$cards-left-padding: 40px;
+
+//Mixins
+
+//общий стиль button
+@mixin button {
+  padding: 20px 24px;
+  border: none;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  border-radius: 120px;
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+}
+
+//отступ слева в большинстве блоков
+@mixin cards-left-padding {
+  padding-left: 40px;
+}
+
+//скругление блоков и элементов
+@mixin cards-border-radius {
+  border-radius: 16px;
+}
+
+@mixin title-font {
+  margin: 0;
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 130%;
+}
