Исправил переменную с жёлтым цветов в section-1

--- a/src/blocks/quizz/quizz.scss
+++ b/src/blocks/quizz/quizz.scss
@@ -4,7 +4,7 @@
   position:relative;
   align-items: flex-start;
   justify-content: space-between;
-  background-color: $attention-color;
+  background-color: $accent-yellow-color;
   border-radius: $cards-border-radius;
   padding-right: 40px;
 
