--- a/src/blocks/section-1/section-1.scss
+++ b/src/blocks/section-1/section-1.scss
@@ -28,7 +28,7 @@
     margin: 0;
     margin-bottom: 24px;
     font-size: 48px;
-    color: $attention-color;
+    color: $accent-yellow-color;
   }
 
   &__description {
