feat: blue card done

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,3 +9,4 @@
 @import "./blocks/section-title/section-title.scss";
 @import "./blocks/questions/questions.scss";
 @import "./blocks/vacancy/vacancy.scss";
+@import "./blocks/expectations/expectations.scss";
