--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -13,3 +13,5 @@ $content-primary-color: #000;
 $black-color: #000;
 $cards-bg-color: #fff;
 $cards-border-radius: 16px;
+$accent-blue-color: #5686E3;
+$light-text-color: #fff;
