fix: root font family

--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -5,5 +5,5 @@
   flex-grow: 1;
   min-height: 100vh;
   background: $primary-bg-color;
-  font-family: $font-family-primary;
+  font-family: $font-family;
 }
