--- a/src/blocks/expectations/expectations.scss
+++ b/src/blocks/expectations/expectations.scss
@@ -1,6 +1,87 @@
 .expectations {
   padding-bottom: 128px;
 
+  &__card {
+    display: flex;
+    min-height: 300px;
+    margin-bottom: 4px;
+
+    &_type_review {
+      flex-direction: row-reverse;
+    }
+  }
+
+  &__card-content-wrapper {
+    background: $cards-bg-color;
+    border-radius: $cards-border-radius;
+    padding: 32px 40px;
+    flex-grow: 1;
+    flex-shrink: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 20px;
+  }
+
+  &__card-title {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 130%;
+    margin: 0;
+    padding: 0;
+  }
+
+  &__card-points {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 130%;
+  }
+
+  &__card-point-accent {
+    font-weight: 500;
+
+    &::before {
+      content: '•';
+      padding: 0 10px;
+    }
+  }
+
+  &__card-button {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    border: none;
+    padding: 15px 24px;
+    border-radius: 120px;
+    background: $black-color;
+    color: $light-text-color;
+  }
+
+  &__card-img {
+    background-color: $link-check-base-color;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex-basis: 500px;
+    border-radius: $cards-border-radius;
+    flex-shrink: 1;
+    flex-grow: 0;
+
+    &_type_mentor {
+      background-image: url('./images/expectations1.jpg');
+    }
+
+    &_type_review {
+      background-image: url('./images/expectations2.jpg');
+    }
+  }
+
   &__steps {
     background: $accent-blue-color;
     padding: 40px;
