fix: button active styles

--- a/src/blocks/expectations/expectations.scss
+++ b/src/blocks/expectations/expectations.scss
@@ -61,6 +61,15 @@
     border-radius: 120px;
     background: $black-color;
     color: $light-text-color;
+    cursor: pointer;
+
+    &:hover {
+      opacity: .9;
+    }
+
+    &:active {
+      transform: scale(.97);
+    }
   }
 
   &__card-img {
