готовая верстка секции

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,3 +11,4 @@
 @import "./blocks/section-1/section-1.scss";
 @import "./blocks/quizz/quizz.scss";
 @import "./blocks/vacancy/vacancy.scss";
+@import "./blocks/what-give/what-give.scss";
