--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -6,4 +6,6 @@
   min-height: 100vh;
   background: $primary-bg-color;
   font-family: $font-family;
+  padding: 12px 0;
+  color: $primary-text-color;
 }
