--- a/src/app.scss
+++ b/src/app.scss
@@ -12,3 +12,4 @@
 @import "./blocks/expectations/expectations.scss";
 @import "./blocks/section-1/section-1.scss";
 @import "./blocks/quizz/quizz.scss";
+@import "./blocks/teaching/teaching.scss";
