feat: social banner

--- a/src/app.scss
+++ b/src/app.scss
@@ -13,3 +13,4 @@
 @import "./blocks/section-1/section-1.scss";
 @import "./blocks/quizz/quizz.scss";
 @import "./blocks/footer/footer.scss";
+@import "./blocks/chanel-banner/chanel-banner.scss";
