feat: basic slider markup

--- a/src/app.scss
+++ b/src/app.scss
@@ -14,3 +14,5 @@
 @import "./blocks/quizz/quizz.scss";
 @import "./blocks/footer/footer.scss";
 @import "./blocks/chanel-banner/chanel-banner.scss";
+@import "./blocks/slides/slides.scss";
+@import "./blocks/slider/slider.scss";
