--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -18,6 +18,7 @@
       border-radius: $cards-border-radius;
       height: 300px;
       z-index: -1;
+      margin-right: 1px; // фикс ширины подложки
     }
   }
 
