feat: base Popup class

--- a/src/app.scss
+++ b/src/app.scss
@@ -17,3 +17,4 @@
 @import "./blocks/chanel-banner/chanel-banner.scss";
 @import "./blocks/slides/slides.scss";
 @import "./blocks/slider/slider.scss";
+@import "./blocks/popup/popup.scss";
