--- a/src/blocks/what-give/what-give.scss
+++ b/src/blocks/what-give/what-give.scss
@@ -13,20 +13,64 @@
 
   &__cards-list {
     display: grid;
-    grid-template-columns: repeat(3, 300px);
+    grid-template-columns: repeat(3, 260px);
     gap: 50px;
+    align-items: center;
+    justify-items: center;
+    position: relative;
   }
 
   &__card {
+    position: absolute;
+    top: 0;
+    left: 0;
     list-style: none;
     padding: 20px;
     border-radius: 30px 30px 0 0;
     background-color: $cards-bg-color;
+    // width: 300px;
+  }
+
+  &__card:nth-child(1) {
+    top: -410px;
+    left: -30px;
+    border-bottom-left-radius: 30px;
+    max-width: 324px;
+  }
+
+  &__card:nth-child(2) {
+    top: -160px;
+    left: -30px;
+    border-bottom-left-radius: 30px;
+    max-width: 324px;
+  }
+
+  &__card:nth-child(3) {
+    top: -520px;
+    left: 370px;
+    border-radius: 30px;
+    width: 226px;
+  }
+
+  &__card:nth-child(4) {
+    top: -160px;
+    left: 715px;
+    border-bottom-right-radius: 30px;
+    width: 235px;
+  }
+
+  &__card:nth-child(5) {
+    top: -408px;
+    left: 716px;
+    border-bottom-right-radius: 30px;
+    width: 212px;
   }
 
   &__card-title {
     margin: 0;
-    margin-bottom: 12px;
+    text-align: center;
+    vertical-align: middle;
+    // margin-bottom: 12px;
     font-family: 'YS Text';
     font-style: normal;
     font-weight: 500;
@@ -35,17 +79,30 @@
   }
 
   &__card-text {
+    display: none;
     margin: 0;
     font-family: 'YS Text';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 130%;
+    max-width: 284px;
   }
 
   &__btn {
     @include button;
     background-color: $accent-yellow-color;
     margin-bottom: 60px;
+  }
+
+  &__animation {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+
+  &__show {
+    opacity: 1;
+    transition: all 2s;
+    transform: translateY(0%);
   }
 }
