feat: popup quizz styles

--- a/src/app.scss
+++ b/src/app.scss
@@ -18,3 +18,4 @@
 @import "./blocks/slides/slides.scss";
 @import "./blocks/slider/slider.scss";
 @import "./blocks/popup/popup.scss";
+@import "./blocks/quizz-form/quizz-form.scss";
