--- a/src/app.scss
+++ b/src/app.scss
@@ -15,3 +15,5 @@
 @import "./blocks/teaching/teaching.scss";
 @import "./blocks/footer/footer.scss";
 @import "./blocks/chanel-banner/chanel-banner.scss";
+@import "./blocks/vacancy-header/vacancy-header.scss";
+@import "./blocks/vacancy-footer/vacancy-footer.scss";
