feat: a part of main

--- a/src/app.scss
+++ b/src/app.scss
@@ -17,3 +17,7 @@
 @import "./blocks/chanel-banner/chanel-banner.scss";
 @import "./blocks/vacancy-header/vacancy-header.scss";
 @import "./blocks/vacancy-footer/vacancy-footer.scss";
+@import "./blocks/main-second-page/main-second-page.scss";
+@import "./blocks/reviewer/reviewer.scss";
+@import "./blocks/about-practikum/about-practikum.scss";
+@import "./blocks/about-job/about-job.scss";
