--- a/src/blocks/about-job/about-job.scss
+++ b/src/blocks/about-job/about-job.scss
@@ -1,20 +1,100 @@
 .about-job{
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto minmax(min-content, 395px);
   grid-template-rows: auto auto;
   gap: 20px;
+  margin-bottom: 20px;
 
   @media(max-width: $screen-lg) {
-    grid-template-rows: initial;
-    grid-template-columns: initial;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto;
   }
 
   @media(max-width: $screen-m) {
     gap: 8px;
+    margin-bottom: 8px;
   }
 
   &__box{
     border: 1px solid $black-color;
     border-radius: 16px;
+    padding: 40px;
+
+    &:nth-of-type(3){
+      grid-row-start: 1;
+      grid-row-end: 3;
+
+      grid-column-start: 2;
+      grid-column-end: 3;
+    }
+
+    @media(max-width: $screen-lg) {
+      &:nth-of-type(3){
+        grid-row-start: 2;
+        grid-row-end: 3;
+
+        grid-column-start: 1;
+        grid-column-end: 2;
+      }
+    }
+    @media(max-width: $screen-m) {
+      padding: 20px;
+    }
+  }
+
+  &__title{
+    margin-top: 0;
+    margin-bottom: 32px;
+    font-family: $font-family-section-titles;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 130%;
+
+    @media(max-width: $screen-m) {
+      margin-bottom: 12px;
+      font-size: 20px;
+    }
+  }
+
+  &__text{
+    margin: 0;
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 130%;
+
+    &:first-of-type{
+      margin-bottom: 12px;
+    }
+
+    @media(max-width: $screen-m) {
+      font-size: 14px;
+    }
+  }
+
+  &__list{
+    padding-left: 25px;
+  }
+
+  &__item{
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 130%;
+    margin-bottom: 8px;
+
+    &::marker{
+      width: 24px;
+      height: 24px;
+    }
+
+    @media(max-width: $screen-m) {
+      font-size: 14px;
+      margin-bottom: 6px;
+    }
+
   }
 }
