--- a/src/blocks/about-practikum/about-practikum.scss
+++ b/src/blocks/about-practikum/about-practikum.scss
@@ -15,9 +15,19 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 130%;
+    margin: 0;
+
+    &:first-of-type{
+      margin-bottom: 25px;
+
+      @media(max-width: $screen-m) {
+        margin-bottom: 16px;
+      }
+    }
 
     @media(max-width: $screen-m) {
       font-size: 14px;
+
     }
   }
 }
