feat: complete quizz logic

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,3 +19,4 @@
 @import "./blocks/slider/slider.scss";
 @import "./blocks/popup/popup.scss";
 @import "./blocks/quizz-form/quizz-form.scss";
+@import "./blocks/quizz-result/quizz-result.scss";
