--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -13,6 +13,7 @@ $primary-text-color: #000;
 $content-primary-color: #000;
 $black-color: #000;
 $cards-bg-color: #fff;
+$hover-blue: #5686E3; //Цвет взят из палитры дизайнеров, но не факт что это нужный
 $cards-border-radius: 16px;
 
 //Mixins
@@ -30,6 +31,9 @@ $cards-border-radius: 16px;
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
+  &:hover {
+    opacity: 0.85;
+  }
 }
 
 //отступ слева в большинстве блоков
