--- a/src/blocks/vacancy/vacancy.scss
+++ b/src/blocks/vacancy/vacancy.scss
@@ -7,12 +7,12 @@
 
     &::after {
       content: '';
-      width: 60px;
-      height: 60px;
-      background: url('./images/target2.svg');
+      width: 94px;
+      height: 89px;
+      background: url('./images/target2.svg') center / contain;
       position: absolute;
-      right: -76px;
-      top: -5px;
+      right: -110px;
+      top: -30px;
     }
   }
 
@@ -65,6 +65,35 @@
     &:checked+.vacancy__filter-item {
       color: $content-primary-color;
     }
+  }
+
+  &__no-results {
+    background: url('./images/tg-big.svg') 85% 50% no-repeat;
+    background-color: $cards-bg-color;
+    border-radius: $cards-border-radius;
+    padding: 40px;
+    display: none;
+
+    &_visible {
+      display: block;
+    }
+  }
+
+  &__no-results-text {
+    margin: 0;
+    padding: 0;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 130%;
+  }
+
+  &__no-results-subscribe {
+    margin: 0;
+    padding: 0;
+    padding-top: 32px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 130%;
   }
 
   &__results {
