--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -17,6 +17,7 @@ $cards-border-radius: 16px;
 $accent-blue-color: #5686E3;
 $light-text-color: #fff;
 $btn-footer-color: #262626;
+$dark-grey-color: #7E7A73;
 
 //Mixins
 
