--- a/src/blocks/slides/slides.scss
+++ b/src/blocks/slides/slides.scss
@@ -4,4 +4,14 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 128px;
+  position: relative;
+
+  &__hearts {
+    position: absolute;
+    right: 90px;
+    top: -45px;
+    background: url('./images/hearts.svg') center / contain no-repeat;
+    width: 382px;
+    height: 125px;
+  }
 }
