--- a/src/blocks/vacancy/vacancy.scss
+++ b/src/blocks/vacancy/vacancy.scss
@@ -56,7 +56,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 130%;
-    color: $link-check-base-color;
+    color: $dark-grey-color;
   }
 
   &__filter-radio {
@@ -148,7 +148,7 @@
   &__banner {
     background: $accent-yellow-color;
     border-radius: $cards-border-radius;
-    padding: 58px 40px;
+    padding: 60px 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -157,15 +157,16 @@
   &__banner-heading {
     display: flex;
     flex-direction: column;
-    row-gap: 2px;
+    row-gap: 4px;
   }
 
   &__banner-title {
+    font-family: $font-family-section-titles;
     margin: 0;
     padding: 0;
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 1.3;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 130%;
     color: $content-primary-color;
   }
 
@@ -173,7 +174,7 @@
     margin: 0;
     padding: 0;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.3;
     color: $content-primary-color;
   }
