feat: popup_type_contacts

--- a/src/app.scss
+++ b/src/app.scss
@@ -28,3 +28,4 @@
 @import "./blocks/popup/popup.scss";
 @import "./blocks/quizz-form/quizz-form.scss";
 @import "./blocks/quizz-result/quizz-result.scss";
+@import "./blocks/vacancy-form/vacancy-form.scss";
