feat: popup_type_contacts fixes

--- a/src/blocks/popup/popup.scss
+++ b/src/blocks/popup/popup.scss
@@ -48,11 +48,8 @@
   }
 }
 
-.popup_type_contacts{
 
-}
-
-.popup__inner{
+.popup__inner-contacts{
   width: 760px;
 
   @media(max-width: $screen-m){
