--- a/src/blocks/questions/questions.scss
+++ b/src/blocks/questions/questions.scss
@@ -65,13 +65,20 @@
   }
 
   &__accordeon-content {
-    margin: 0;
+    max-height: 0px;
+    display: flex;
+    row-gap: 16px;
+    flex-direction: column;
     background: $cards-bg-color;
     border-radius: $cards-border-radius;
+    transition: max-height .3s, padding 0s ease .3s;
+  }
+
+  &__content-paragraph {
+    margin: 0;
+    padding: 0;
     font-weight: 400;
     font-size: 20px;
     line-height: 1.3;
-    max-height: 0px;
-    transition: max-height .3s, padding 0s ease .3s;
   }
 }
