--- a/src/blocks/teaching/teaching.scss
+++ b/src/blocks/teaching/teaching.scss
@@ -12,14 +12,37 @@
       position: absolute;
       right: -102px;
       top: -17px;
+
+      @media (max-width: $screen-m) {
+        background: none;
+
+      }
     }
   }
 
   &__box{
     margin-bottom: 198px;
-    display: flex;
-    flex-wrap: wrap;
+    // display: flex;
+    // flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
     gap: 12px;
+
+    @media (max-width: $screen-lg) {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto auto auto;
+    }
+
+    @media (max-width: $screen-m) {
+      grid-template-columns: 100%;
+      grid-template-rows: repeat(6, auto);
+    }
+  }
+
+  &__links-box{
+    display: grid;
+    grid-template-columns: minmax(min-content, max-content) 160px;
   }
 
   &__link{
@@ -110,30 +133,42 @@
     background-color: #fff;
     border-radius: 16px;
     z-index: 1;
+    max-width: 217.33px;
+
+    @media (max-width: $screen-lg) {
+      max-width: 100%
+
+    }
 
     &_c{
-      max-width: 232px;
+      // max-width: 232px;
     }
 
     &_sql{
-      max-width: 210px;
+      // max-width: 210px;
     }
 
     &_it{
-      max-width: 210px;
+      // max-width: 210px;
       border-radius: 0 16px 16px 0;
     }
 
     &_figma{
-      max-width: 217.33px;
+      // max-width: 217.33px;
     }
 
     &_traffic{
-      max-width: 217.33px;
+      // max-width: 217.33px;
     }
 
     &_eng{
-      width: 170.33px;
+      max-width: 170.33px;
+      margin-right: 12px;
+
+      @media (max-width: $screen-lg) {
+        max-width: 372px;
+
+      }
     }
 
     &_all{
