--- a/src/blocks/section-1/section-1.scss
+++ b/src/blocks/section-1/section-1.scss
@@ -1,26 +1,41 @@
 .section1 {
   margin-top: 72px;
   margin-bottom: 75px;
+  margin: 0 20px;
 
   &__main {
     @include cards-left-padding;
     @include cards-border-radius;
+    max-height: 508px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     background-color: $cards-bg-color;
     margin-bottom: 8px;
-    overflow: hidden;
+    @media screen and (max-width: 660px) {
+      padding: 0 20px;
+    }
   }
 
   &__text {
     max-width: 540px;
-    padding-top: 32px
+    min-width: 473px;
+    padding-top: 32px;
+    @media screen and (max-width: 900px) {
+      max-width: 600px;
+    }
+    @media screen and (max-width: 540px) {
+      max-width: 400px;
+      min-width: auto;
+    }
   }
 
   &__title {
     @include title-font;
     font-size: 48px;
+    @media screen and (max-width: 540px) {
+      font-size: 32px;
+    }
   }
 
   &__subtitle {
@@ -29,6 +44,9 @@
     margin-bottom: 24px;
     font-size: 48px;
     color: $accent-yellow-color;
+    @media screen and (max-width: 540px) {
+      font-size: 32px;
+    }
   }
 
   &__description {
@@ -39,11 +57,19 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 130%;
+    @media screen and (max-width: 900px) {
+      margin-bottom: 22px;
+    }
   }
 
   &__img {
-    max-width: 480px;
-    max-height: 508px;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: $cards-border-radius;
+    @media screen and (max-width: 900px) {
+      display: none;
+    }
   }
 
   &__btn {
@@ -51,5 +77,8 @@
     background-color: $primary-text-color;
     color: $light-text-color;
     margin-bottom: 62px;
+    @media screen and (max-width: 900px) {
+      margin-bottom: 20px;
+    }
   }
 }
