margin 20px в content

--- a/src/blocks/content/content.scss
+++ b/src/blocks/content/content.scss
@@ -1,5 +1,6 @@
 .content {
-  width: 100%;
+  max-width: 1180px;
+  margin: 0 20px;
   margin-top: 70px;
   display: flex;
   flex-direction: column;
