--- a/src/blocks/content/content.scss
+++ b/src/blocks/content/content.scss
@@ -1,6 +1,7 @@
 .content {
-  max-width: 1180px;
-  margin: 0 20px;
+  width: 100%;
+  // max-width: 1180px;
+  // margin: 0 20px;
   margin-top: 70px;
   display: flex;
   flex-direction: column;
