--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -6,30 +6,46 @@
   align-items: center;
   justify-content: space-between;
   padding: 12px 20px;
-  height: 32px;
+  height: 36px;
+  width: 92vw;
   max-width: 1140px;
-  width: 100%;
   top: 12px;
   z-index: 100;
   position: fixed;
+  @media screen and (max-width: 375px) {
+      
+    }
+
+  &__wrapper {
+    display: flex;
+  }
 
   &__logo {
     display: block;
     background-image: url("images/header__logo.svg");
+    background-repeat: no-repeat;
     width: 163px;
-    height: 30px;
+    height: 32px;
+    margin-right: 45px;
     &:hover {
       cursor: pointer;
       opacity: .8;
     }
+    @media screen and (max-width: 900px) {
+      margin-right: 10px;
+    }
   }
 
   &__questions {
-    margin: 0 9.65% 0 0;
+    margin: 5px 0 0 0;
     padding: 0;
     display: grid;
     grid-template-columns: repeat(4, minmax(min-content, max-content));
     column-gap: 24px;
+    align-items: center;
+    @media screen and (max-width: 900px) {
+      display: none;
+    }
   }
 
   &__question {
@@ -64,6 +80,8 @@
     border-radius: 120px;
     background-color: black;
     padding: 7px 12px;
+    margin-left: 5px;
+    max-height: 32px;
 
     &:hover {
       opacity: .8;
