--- a/src/blocks/what-give/what-give.scss
+++ b/src/blocks/what-give/what-give.scss
@@ -1,5 +1,8 @@
 .what-give {
   margin-bottom: 128px;
+  @media screen and (max-width: 375px) {
+    margin-bottom: 72px;
+  }
 
   &__container {
     @include cards-border-radius;
@@ -19,6 +22,7 @@
     @media screen and (max-width: 480px) {
       background-image: none;
       height: auto;
+      max-width: 320px;
     }
   }
 
@@ -31,10 +35,6 @@
     align-items: center;
     justify-items: center;
     position: relative;
-    @media screen and (max-width: 1040px) {
-    }
-    @media screen and (max-width: 480px) {
-    }
   }
 
   &__card {
@@ -49,7 +49,7 @@
       position: static;
       margin-bottom: 4px;
       width: 100% !important;
-      border-radius: 30px;
+      border-radius: 16px !important;
       box-sizing: border-box;
     }
   }
@@ -97,8 +97,6 @@
     @media screen and (max-width: 1040px) {
       right: 3em;
     }
-    @media screen and (max-width: 480px) {
-    }
   }
 
   &__card:nth-child(5) {
@@ -128,9 +126,10 @@
       margin: 0;
     }
     @media screen and (max-width: 480px) {
-      font-size: 16px;
+      font-size: 24px;
       text-align: start;
       margin-bottom: 12px;
+      max-width: 320px;
     }
   }
 
@@ -160,6 +159,10 @@
     &:hover {
       background-color: $hover-blue;
     }
+    @media screen and (max-width: 375px) {
+    margin-bottom: 0;
+    width: 100%;
+  }
   }
 
   &__animation {
