--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -12,9 +12,6 @@
   top: 12px;
   z-index: 100;
   position: fixed;
-  @media screen and (max-width: 375px) {
-      
-    }
 
   &__wrapper {
     display: flex;
@@ -82,6 +79,7 @@
     padding: 7px 12px;
     margin-left: 5px;
     max-height: 32px;
+    cursor: pointer;
 
     &:hover {
       opacity: .8;
